--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vanilla-cookieconsent",
+    "name": "vuolo-cookieconsent",
     "version": "3.0.1",
     "description": "🍪 Simple cross-browser cookie-consent plugin written in vanilla js.",
     "main": "dist/cookieconsent.umd.js",
@@ -21,7 +21,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/orestbida/cookieconsent"
+        "url": "https://github.com/vuolo/cookieconsent"
     },
     "keywords": [
         "cookie",
